--- a/base/src/main/resources/i18n/messages_en.properties
+++ b/base/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,6 @@
 service.user.login.verification=verification fail!
 service.user.login.fail=account or password error!
 service.user.login.success=login success!
+
+service.user.register.verification=verification fail!
+service.user.register.error=register fail!
