--- a/base/src/main/resources/i18n/messages_zh.properties
+++ b/base/src/main/resources/i18n/messages_zh.properties
@@ -1,3 +1,6 @@
 service.user.login.verification=登录校验失败!
 service.user.login.fail=账户名或者密码不正确!
 service.user.login.success=登录成功!
+
+service.user.register.verification=注册校验失败!
+service.user.register.error=注册失败!
