兼容处理跨域请求

--- a/base/src/main/resources/i18n/messages_en.properties
+++ b/base/src/main/resources/i18n/messages_en.properties
@@ -4,3 +4,5 @@ service.user.login.success=login success!
 
 service.user.register.verification=verification fail!
 service.user.register.error=register fail!
+
+service.user.save.fail=save fail!
