--- a/base/src/main/resources/i18n/messages_zh.properties
+++ b/base/src/main/resources/i18n/messages_zh.properties
@@ -4,3 +4,5 @@ service.user.login.success=登录成功!
 
 service.user.register.verification=注册校验失败!
 service.user.register.error=注册失败!
+
+service.user.save.fail=保存失敗!
